--- a/style.css
+++ b/style.css
@@ -1,27 +1,30 @@
-img{
-  max-width: 300px
-}
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=Playfair+Display:ital,wght@0,400;1,600&family=Sansita+Swashed:wght@400;600&display=swap');
 
 html{
-  background-color: rgb(240, 235, 171)
+  background-color: rgb(240, 208, 171);
+  color: rgb(102, 10, 10)
 }
 
 a:link{
-color: rgb(10, 86, 121);
-border: 4px double rgb(51, 112, 154);
+color: rgb(192, 68, 37);
+border: 4px double rgb(199, 71, 62);
 padding: 15px;
-background-color: rgb(181, 234, 241)
+background-color: rgb(248, 189, 166);
+font-family: "Playfair Display", serif;
+font-size: 12pt;
+font-weight: 400;
+font-style: normal;
 }
 
 a:visited{
-color: rgb(168, 8, 8);
+color: rgb(197, 40, 132);
 }
 
 a:hover{
 color: rgb(12, 88, 9);
 border: 4px solid rgb(3, 102, 56);
 background-color: rgb(112, 235, 173);
-box-shadow: 0px 0px 5px 5px rgb(118, 118, 118);
+box-shadow: 0px 0px 4px 4px rgb(118, 118, 118);
 text-decoration: underline;
 }
 
@@ -34,5 +37,44 @@ color: rgb(122, 95, 129)
 }
 
 li{
-  margin-bottom: 40px;
+  margin-bottom: 45px;
+}
+
+.odd{
+  float: left;
+  margin-right: 15px;
+}
+
+.even{
+  float: right;
+  margin-left: 15px;
+}
+
+p{
+ text-align: justify;
+ font-family: "PT Sans", sans-serif;
+ font-size: 12pt;
+}
+
+h1{
+  background-color: rgb(241, 141, 141);
+  border: double 6px rgb(109, 3, 65);
+  font-family: "Sansita Swashed", fantasy;
+  font-size: 22pt;
+  font-weight: 400;
+  font-style: normal;
+}
+
+h2{
+  background-color: rgb(247, 165, 165);
+  font-family: "Playfair Display", serif;
+  font-size: 15pt;
+  font-weight: 600;
+  font-style: italic;
+}
+
+img{
+  border: 6px solid rgb(128, 5, 76);
+  padding: 8px;
+  max-width: 300px;
 }
